--- a/project-1/assets/css/nav.css
+++ b/project-1/assets/css/nav.css
@@ -3,9 +3,8 @@ nav {
   bottom: 3em;
   left: 2em;
   z-index: 9999999999;
-  font-size: 16px !important;
+  font-size: 16px;
 }
-
 nav a {
    text-decoration: none; 
    color: #ddd;
