--- a/project-3/assets/css/finalwebsite.css
+++ b/project-3/assets/css/finalwebsite.css
@@ -22,7 +22,7 @@
  
 form {
 font-family: 'occupy', Lucida Grande, sans-serif;
-font-size: 9Pt; color: black; postion:relative;
+font-size: 9Pt; color: blue; postion:relative;
 } 
 
 textarea {
